--- a/config/s3.yaml.example
+++ b/config/s3.yaml.example
@@ -1,6 +1,16 @@
-bucket: "dv-backup"
+#
+#  ## Пример файла конфигурации Amazon S3 для nekoBackup
+#
+
+#
+# Бакет и директория, в которую будут загружаться файлы
+#
+bucket:    "dv-backup"
 directory: "dv-dev.ru"
 
+#
+# Информация о доступе к хранилищу
+#
 access_key:
 secret_key:
 location: eu-west-1
