Example config.yaml fixed

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -34,9 +34,9 @@ schedule:
 # * daily   - каждый день (кроме понедельников)
 #
 cleanup:
-  monthly: "1 month" # Ежемесячные бекапы храним 1 месяц
-  weekly:  "4 weeks" # Еженедельные храним 4 недели
-  daily:   "7 days"  # Ежедневные храним 7 дней
+  monthly: 1 month # Ежемесячные бекапы храним 1 месяц
+  weekly:  4 weeks # Еженедельные храним 4 недели
+  daily:   7 days  # Ежедневные храним 7 дней
 
 #
 # ## Сохранение информации об установленных в системе пакетах
