--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -13,19 +13,6 @@
 storage: /mnt/backup/
 
 #
-# ## Порядок исполнения операций
-#
-# Если какая-то из операций не используется, закомментируйте
-# соответствующую строку.
-#
-schedule:
-  - system
-  - directory
-  - subdirectory
-  - database
-  - cleanup # всегда должна быть в конце!
-
-#
 # ## Сроки хранения для директорий в формате strtotime
 #
 # Срок указывается в соответствии с датой бекапа
@@ -77,7 +64,7 @@ subdirectory:
       - websites              #   В нашем примере исключает /home/*/websites
 
   archive4:                   # Название архива (применяется для имени файла)
-    base: /home|/websites     # Базовая директория (разделена символом |, в нашем примере будут архивироваться директории /home/*/websites/* )
+    base: /home/*/websites     # Базовая директория (разделена символом |, в нашем примере будут архивироваться директории /home/*/websites/* )
     period_default: weekly    # Периодичность для директорий у которых она не указана явно
     period_override:          # Явное указание периодичности для директорий
       otaku: monthly          #   Указывает периодичность для /home/otaku/websites/*
