--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "aws/aws-sdk-php": "2.3.*@dev",
     "symfony/yaml": "2.3.x-dev",
+    "symfony/finder": "2.3.x-dev",
     "symfony/event-dispatcher": "2.3.x-dev"
   },
   "autoload": {
