--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "aws/aws-sdk-php": "2.3.*@dev",
     "symfony/yaml": "2.3.x-dev",
     "symfony/finder": "2.3.x-dev",
+    "symfony/console": "2.3.x-dev",
     "symfony/event-dispatcher": "2.3.x-dev"
   },
   "autoload": {
