postgres example fixed

--- a/etc/nbackup.d/5-postgres.yaml.example
+++ b/etc/nbackup.d/5-postgres.yaml.example
@@ -1,7 +1,7 @@
-#postgres:
-#  type: postgres
-#  sh_user: postgres
-#  exclude:
-#    - postgres
-#  schedule: daily
-#  cleanup: 7
+postgres:
+  type: postgres
+  sh_user: postgres
+  exclude:
+    - postgres
+  schedule: daily
+  cleanup: 7
