--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
   "require": {
-    "aws/aws-sdk-php": "2.3.*@dev",
-    "symfony/yaml": "2.3.x-dev",
-    "symfony/finder": "2.3.x-dev",
-    "symfony/console": "2.3.x-dev",
-    "symfony/event-dispatcher": "2.3.x-dev"
+    "aws/aws-sdk-php": "2.3.*",
+    "symfony/yaml": "2.3.*",
+    "symfony/finder": "2.3.*",
+    "symfony/console": "2.3.*",
+    "symfony/event-dispatcher": "2.3.*"
   },
   "autoload": {
     "psr-0": {"nekoBackup\\": "source/"}
