Обновлен пример, ридми и композер.

--- a/etc/nbackup.d/3-websites.yaml.example
+++ b/etc/nbackup.d/3-websites.yaml.example
@@ -1,7 +1,6 @@
 websites:
   type: directory
-  include:
-    - /srv/www/*/*
+  include: /srv/www/*/*
   exclude:
     - /srv/www/unique/maria
   schedule:
