--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "aws/aws-sdk-php": "2.3.*",
     "symfony/yaml": "2.3.*",
     "symfony/finder": "2.3.*",
-    "symfony/console": "2.3.*",
-    "symfony/event-dispatcher": "2.3.*"
+    "symfony/console": "2.3.*"
   },
   "autoload": {
     "psr-0": {"nekoBackup\\": "source/"}
